--- a/sandmock.vcproj
+++ b/sandmock.vcproj
@@ -219,10 +219,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\MockExceptions.h"
-				>
-			</File>
-			<File
 				RelativePath=".\no_cref.h"
 				>
 			</File>
@@ -235,7 +231,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\ValueHolder.h"
+				RelativePath=".\TypeTraits.h"
 				>
 			</File>
 		</Filter>
