--- a/sandmock.vcproj
+++ b/sandmock.vcproj
@@ -203,6 +203,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\carnamock.h"
+				>
+			</File>
+			<File
 				RelativePath=".\IRegistry.h"
 				>
 			</File>
