Improving the code bloat in ActionBuilder and CallAction

--- a/carnamock.vcproj
+++ b/carnamock.vcproj
@@ -215,6 +215,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\FunctionTraits.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\IRegistry.h"
 				>
 			</File>
